# cursor

./: .cursorrules  .gitignore  AGENTS.md  agent-experience-system-plan.md  agent-feedback-system-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: submit-feedback.md
.cursor/agents/: builder.md  orchestrator.md  pytester.md  reviewer.md
src/agent_feedback/: __main__.py  cli.py  models.py  orchestrator.py  prompt_builder.py  store.py  stream.py
src/agent_feedback/adapters/: __init__.py  base.py  claude_code.py  cursor.py  pi.py
tasks/: example_task.md
tests/: test_models.py  test_prompt_builder.py  test_store.py
